// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doAction:page reload 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Page数据加载请求
            </span>
          </button>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="title"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的标题：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="title"
                  placeholder=""
                  size="10"
                  type="text"
                  value="Test Page Component"
                />
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="age"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的年龄：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="age"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:page reload 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-overlay"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner __AMIS_COMPONENT_CLASS_PREFIX__Spinner--overlay"
            data-testid="spinner"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
            />
          </div>
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Page数据加载请求
            </span>
          </button>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="title"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的标题：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="title"
                  placeholder=""
                  size="10"
                  type="text"
                  value="Test Page Component"
                />
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="age"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的年龄：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="age"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:page reload with data 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Page数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="title"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的标题：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="title"
                  placeholder=""
                  size="10"
                  type="text"
                  value="Test Page Component"
                />
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="age"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的年龄：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="age"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:page reload with data 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-overlay"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner __AMIS_COMPONENT_CLASS_PREFIX__Spinner--overlay"
            data-testid="spinner"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
            />
          </div>
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Page数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="title"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的标题：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="title"
                  placeholder=""
                  size="10"
                  type="text"
                  value="Test Page Component"
                />
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="age"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的年龄：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="age"
                  placeholder=""
                  size="10"
                  type="text"
                  value="18"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:page reload with data(same name) 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Page数据加载请求，请求返回的date会覆盖动作传递的date
            </span>
          </button>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="title"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的标题：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="title"
                  placeholder=""
                  size="10"
                  type="text"
                  value="Test Page Component"
                />
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="date"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    日期：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="date"
                  placeholder=""
                  size="10"
                  type="text"
                  value="2017-10-13"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:page reload with data(same name) 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Page数据加载请求，请求返回的date会覆盖动作传递的date
            </span>
          </button>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="title"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    我的标题：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="title"
                  placeholder=""
                  size="10"
                  type="text"
                  value="Test Page Component"
                />
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="date"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    日期：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="date"
                  placeholder=""
                  size="10"
                  type="text"
                  value="2017-10-13"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
